webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    app: web
  type: ClusterIP
